--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/shared/http/server.ts",
+    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/http/server.ts",
     "lint": "eslint . --ext .ts",
     "lint-fix": "eslint . --ext .ts --fix"
   },
@@ -16,8 +16,12 @@
     "D": "^1.0.0",
     "cors": "^2.8.5",
     "expres": "^0.0.5",
+    "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "pg": "^8.5.1",
+    "reflect-metadata": "^0.1.13",
     "ts-node-dev": "^1.1.1",
+    "typeorm": "^0.2.30",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
@@ -26,6 +30,7 @@
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "tsconfig-paths": "^3.9.0"
   }
 }
